// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerNotification Component should match snapshot with different testId 1`] = `
<View
  accessibilityLabel="customBanner"
  accessible={true}
  style={
    {
      "alignSelf": "center",
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    style={
      [
        {
          "alignItems": undefined,
          "flexDirection": "row",
          "justifyContent": undefined,
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        [
          {
            "alignItems": "center",
            "backgroundColor": "#DB2E2E",
            "borderRadius": 10,
            "columnGap": 7,
            "height": 70,
            "justifyContent": "space-between",
            "marginVertical": 1,
            "paddingHorizontal": 18,
            "paddingVertical": 12,
            "position": "relative",
            "width": "100%",
          },
          {
            "backgroundColor": "#9DCFBB",
            "color": "#384455",
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "row",
            "justifyContent": undefined,
          },
          {
            "flex": 1,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ]
      }
    >
      <SuccessToastIcon />
      <Text
        accessibilityLabel="customBannerText"
        style={
          [
            {
              "color": "#000000",
              "fontSize": 16,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15,
            },
            {
              "color": "#384455",
            },
            {
              "textAlign": "left",
            },
            null,
            null,
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 14,
              "lineHeight": 15,
              "marginHorizontal": 8,
              "padding": 1,
              "textAlignVertical": "center",
            },
          ]
        }
      >
        Test notification message
      </Text>
    </View>
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ]
      }
    >
      <View
        accessibilityLabel="close"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "paddingLeft": 9,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`BannerNotification Component should match snapshot with error status 1`] = `
<View
  accessibilityLabel="bannerTest"
  accessible={true}
  style={
    {
      "alignSelf": "center",
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    style={
      [
        {
          "alignItems": undefined,
          "flexDirection": "row",
          "justifyContent": undefined,
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        [
          {
            "alignItems": "center",
            "backgroundColor": "#DB2E2E",
            "borderRadius": 10,
            "columnGap": 7,
            "height": 70,
            "justifyContent": "space-between",
            "marginVertical": 1,
            "paddingHorizontal": 18,
            "paddingVertical": 12,
            "position": "relative",
            "width": "100%",
          },
          {
            "backgroundColor": "#EFB3B5",
            "color": "#384455",
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "row",
            "justifyContent": undefined,
          },
          {
            "flex": 1,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ]
      }
    >
      <SuccessToastIcon />
      <Text
        accessibilityLabel="bannerTestText"
        style={
          [
            {
              "color": "#000000",
              "fontSize": 16,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15,
            },
            {
              "color": "#384455",
            },
            {
              "textAlign": "left",
            },
            null,
            null,
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 14,
              "lineHeight": 15,
              "marginHorizontal": 8,
              "padding": 1,
              "textAlignVertical": "center",
            },
          ]
        }
      >
        Test notification message
      </Text>
    </View>
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ]
      }
    >
      <View
        accessibilityLabel="close"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "paddingLeft": 9,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`BannerNotification Component should match snapshot with in progress status 1`] = `
<View
  accessibilityLabel="bannerTest"
  accessible={true}
  style={
    {
      "alignSelf": "center",
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    style={
      [
        {
          "alignItems": undefined,
          "flexDirection": "row",
          "justifyContent": undefined,
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        [
          {
            "alignItems": "center",
            "backgroundColor": "#DB2E2E",
            "borderRadius": 10,
            "columnGap": 7,
            "height": 70,
            "justifyContent": "space-between",
            "marginVertical": 1,
            "paddingHorizontal": 18,
            "paddingVertical": 12,
            "position": "relative",
            "width": "100%",
          },
          {
            "backgroundColor": "#FFE799",
            "color": "#384455",
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "row",
            "justifyContent": undefined,
          },
          {
            "flex": 1,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ]
      }
    >
      <SuccessToastIcon />
      <Text
        accessibilityLabel="bannerTestText"
        style={
          [
            {
              "color": "#000000",
              "fontSize": 16,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15,
            },
            {
              "color": "#384455",
            },
            {
              "textAlign": "left",
            },
            null,
            null,
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 14,
              "lineHeight": 15,
              "marginHorizontal": 8,
              "padding": 1,
              "textAlignVertical": "center",
            },
          ]
        }
      >
        Test notification message
      </Text>
    </View>
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ]
      }
    >
      <View
        accessibilityLabel="close"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "paddingLeft": 9,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`BannerNotification Component should match snapshot with long message 1`] = `
<View
  accessibilityLabel="bannerTest"
  accessible={true}
  style={
    {
      "alignSelf": "center",
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    style={
      [
        {
          "alignItems": undefined,
          "flexDirection": "row",
          "justifyContent": undefined,
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        [
          {
            "alignItems": "center",
            "backgroundColor": "#DB2E2E",
            "borderRadius": 10,
            "columnGap": 7,
            "height": 70,
            "justifyContent": "space-between",
            "marginVertical": 1,
            "paddingHorizontal": 18,
            "paddingVertical": 12,
            "position": "relative",
            "width": "100%",
          },
          {
            "backgroundColor": "#9DCFBB",
            "color": "#384455",
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "row",
            "justifyContent": undefined,
          },
          {
            "flex": 1,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ]
      }
    >
      <SuccessToastIcon />
      <Text
        accessibilityLabel="bannerTestText"
        style={
          [
            {
              "color": "#000000",
              "fontSize": 16,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15,
            },
            {
              "color": "#384455",
            },
            {
              "textAlign": "left",
            },
            null,
            null,
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 14,
              "lineHeight": 15,
              "marginHorizontal": 8,
              "padding": 1,
              "textAlignVertical": "center",
            },
          ]
        }
      >
        This is a very long notification message that should wrap to multiple lines and still be displayed correctly
      </Text>
    </View>
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ]
      }
    >
      <View
        accessibilityLabel="close"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "paddingLeft": 9,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`BannerNotification Component should match snapshot with success status 1`] = `
<View
  accessibilityLabel="bannerTest"
  accessible={true}
  style={
    {
      "alignSelf": "center",
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    style={
      [
        {
          "alignItems": undefined,
          "flexDirection": "row",
          "justifyContent": undefined,
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        [
          {
            "alignItems": "center",
            "backgroundColor": "#DB2E2E",
            "borderRadius": 10,
            "columnGap": 7,
            "height": 70,
            "justifyContent": "space-between",
            "marginVertical": 1,
            "paddingHorizontal": 18,
            "paddingVertical": 12,
            "position": "relative",
            "width": "100%",
          },
          {
            "backgroundColor": "#9DCFBB",
            "color": "#384455",
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "row",
            "justifyContent": undefined,
          },
          {
            "flex": 1,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ]
      }
    >
      <SuccessToastIcon />
      <Text
        accessibilityLabel="bannerTestText"
        style={
          [
            {
              "color": "#000000",
              "fontSize": 16,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15,
            },
            {
              "color": "#384455",
            },
            {
              "textAlign": "left",
            },
            null,
            null,
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 14,
              "lineHeight": 15,
              "marginHorizontal": 8,
              "padding": 1,
              "textAlignVertical": "center",
            },
          ]
        }
      >
        Test notification message
      </Text>
    </View>
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ]
      }
    >
      <View
        accessibilityLabel="close"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "paddingLeft": 9,
          }
        }
      />
    </View>
  </View>
</View>
`;
